--- a/index.html
+++ b/index.html
@@ -9,19 +9,91 @@
 </head>
 
 <body>
-  <header class="header"></header>
+  <header class="header">
+    <nav class="menu">
+      <ul>
+        <li><a href="#main"></a>Inicio</li>
+        <li><a href="#tribute-info"></a>Biografia</li>
+        <li><a href="#doutrina"></a>Doutrina</li>
+        <li><a href="#tribute-link"></a>Referência</li>
+        <li><a href="#footer"></a>Mais sobre</li>
+      </ul>
+    </nav>
+  </header>
   <main class="main" id="main">
     <h1 id="title">Santa Teresinha do Menino Jesus e da Sagrada Face</h1>
     <div id="img-div">
-      <img src="https://i.ytimg.com/vi/eAUSXIHUzWY/maxresdefault.jpg" alt="" id="image" max-width="300" height="200">
-      <figcaption id="img-caption">Santa Teresinha</figcaption>
+      <div class="image-main">
+        <img src="./img/Therese_von_Lisieux.jpg" alt="Santa Teresinha" id="image">
+        <figcaption id="img-caption">A noviça Teresa</figcaption>
+      </div>
     </div>
     <section id="tribute-info">
-      <h2>Seção sobre a vida e mais informações</h2>
+      <h2>A vida de Marie-Françoise-Thérèse Martin</h2>
+      <p>Santa Teresinha, também conhecida como Santa Teresa de Lisieux ou Santa Teresa do Menino Jesus e da Sagrada Face, foi uma freira carmelita e uma das grandes santas da Igreja Católica. Ela nasceu como Marie-Françoise-Thérèse Martin em 2 de janeiro de 1873, em Alençon, na França. Ela foi a última dos nove filhos de Louis Martin e Zélie Guérin, ambos canonizados pela Igreja Católica em 18 de outubro de 2015.</p>
+      <br>
+      <p>Desde muito jovem, Thérèse mostrou um profundo amor por Deus e um desejo de dedicar sua vida ao serviço religioso. Com apenas 15 anos, após uma peregrinação a Roma com seu pai, ela se sentiu chamada a se tornar freira carmelita, apesar de sua pouca idade. No entanto, ela enfrentou dificuldades para ingressar no convento, pois não atendia à idade mínima exigida pelas regras da época.</p>
+      <br>
+      <p>Em 9 de abril de 1888, aos 15 anos e meio, ela ingressou no Carmelo de Lisieux, uma ordem contemplativa de freiras carmelitas em Lisieux, na Normandia. Lá, ela tomou o nome de Irmã Teresa do Menino Jesus e da Sagrada Face. Santa Teresinha é conhecida por sua "pequena via" espiritual, que enfatiza a simplicidade, humildade e confiança total na misericórdia de Deus. Ela acreditava que mesmo nas tarefas mais simples e comuns da vida cotidiana, era possível encontrar e agradar a Deus.</p>
+      <br>
+      <p>Durante seus nove anos de vida religiosa, Santa Teresinha sofreu com a tuberculose e enfrentou desafios emocionais e espirituais. No entanto, ela se manteve firmemente dedicada a sua "pequena via" e ao amor a Deus. Após sua morte prematura em 30 de setembro de 1897, aos 24 anos, sua autobiografia, intitulada "História de uma Alma" ("L'Histoire d'une Âme"), foi publicada e ganhou muita atenção.</p>
+      <br>
+      <p>A espiritualidade de Santa Teresinha teve um impacto profundo na Igreja Católica e além, inspirando muitos fiéis com sua abordagem simples e confiante em relação à fé. Ela foi canonizada pelo Papa Pio XI em 17 de maio de 1925. Além disso, em 1997, o Papa João Paulo II a proclamou Doutora da Igreja, tornando-a uma das três únicas mulheres a receber essa honra, juntamente com Santa Catarina de Sena e Santa Teresa de Ávila.</p>
+      <br>
+      <p>Santa Teresinha é considerada a padroeira das missões e, embora tenha vivido uma vida breve e aparentemente comum, seu exemplo e ensinamentos continuam a inspirar milhões de pessoas ao redor do mundo, e ela é uma das santas mais populares e queridas da história da Igreja Católica.</p>
     </section>
+    <article>
+      <ul>
+        <li>
+          <p>1873: 2 de janeiro: Nasce Marie-Françoise-Thérèse Martin em Alençon, França.</p>
+        </li>
+        <li>
+          <p>1877: Sua mãe, Zélie Guérin, falece em 28 de agosto.</p>
+        </li>
+        <li>
+          <p>1883: Aos 10 anos, Santa Teresinha sofre uma grave doença que ela acredita ter sido curada pela Virgem Maria, após um milagre obtido através de uma relíquia da Santa Teresinha do Menino Jesus.</p>
+        </li>
+        <li>
+          <p>1884: Santa Teresinha recebe sua Primeira Comunhão em 8 de maio.</p>
+        </li>
+        <li>
+          <p>1884: Após a morte de sua irmã Paulina (Madre Agnès do Santíssimo Sacramento) em 28 de julho, ela decide entrar no convento das Carmelitas em Lisieux.</p>
+        </li>
+        <li>
+          <p>1888: 9 de abril: Entra no Carmelo de Lisieux, aos 15 anos, tomando o nome de Irmã Teresa do Menino Jesus e da Sagrada Face.</p>
+        </li>
+        <li>
+          <p>1888: 8 de setembro: Professa seus votos religiosos.</p>
+        </li>
+        <li>
+          <p>1890: Santa Teresinha escreve sua autobiografia "História de uma Alma".</p>
+        </li>
+        <li>
+          <p>1896: Santa Teresinha fica gravemente doente de tuberculose.</p>
+        </li>
+        <li>
+          <p>1897: 30 de setembro: Santa Teresinha falece aos 24 anos, após uma longa batalha contra a tuberculose.</p>
+        </li>
+        <li>
+          <p>1897: Publicação póstuma de "História de uma Alma", que atrai a atenção e devoção de muitos leitores.</p>
+        </li>
+        <li>
+          <p>1925: 17 de maio: Santa Teresinha é canonizada pelo Papa Pio XI.</p>
+        </li>
+        <li>
+          <p>1997: Proclamada Doutora da Igreja pelo Papa João Paulo II em 19 de outubro, em reconhecimento à sua profunda espiritualidade e contribuições para a teologia e a vida espiritual.</p>
+        </li>
+
+      </ul>
+
+      <blockquote>"A perfeição não consiste em conhecer muitas coisas, mas sim em conhecer a Deus e amá-Lo com todo o coração."</blockquote>
+    </article>
+    <section id="doutrina"></section>
     <a href="" id="tribute-link" target="_blank"></a>
   </main>
-  <footer class="footer"></footer>
+  <footer id="footer">
+
+  </footer>
 </body>
 
 </html>
