--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
   <header class="header">
     <nav class="menu">
-      <ul>
-        <li><a href="#main"></a>Inicio</li>
-        <li><a href="#tribute-info"></a>Biografia</li>
-        <li><a href="#doutrina"></a>Doutrina</li>
-        <li><a href="#tribute-link"></a>Referência</li>
-        <li><a href="#footer"></a>Mais sobre</li>
+      <ul class="menu-list">
+        <li><a href="#main">Inicio</a></li>
+        <li><a href="#tribute-info">Biografia</a></li>
+        <li><a href="#doutrina">Doutrina</a></li>
+        <li><a href="#tribute-link">Referência</a></li>
+        <li><a href="#footer">Mais sobre</a></li>
       </ul>
     </nav>
   </header>
   <main class="main" id="main">
     <h1 id="title">Santa Teresinha do Menino Jesus e da Sagrada Face</h1>
     <div id="img-div">
-      <div class="image-main">
+      <div class="main-image">
         <img src="./img/Therese_von_Lisieux.jpg" alt="Santa Teresinha" id="image">
         <figcaption id="img-caption">A noviça Teresa</figcaption>
       </div>
@@ -83,12 +83,16 @@
         <li>
           <p>1997: Proclamada Doutora da Igreja pelo Papa João Paulo II em 19 de outubro, em reconhecimento à sua profunda espiritualidade e contribuições para a teologia e a vida espiritual.</p>
         </li>
-
       </ul>
+
 
       <blockquote>"A perfeição não consiste em conhecer muitas coisas, mas sim em conhecer a Deus e amá-Lo com todo o coração."</blockquote>
     </article>
-    <section id="doutrina"></section>
+    <section id="doutrina">
+      <p>
+        O conceito de "infância espiritual" na Igreja remonta aos tempos de Jesus, que ensinava que seus discípulos deveriam se tornar como crianças para entrar no Reino dos céus. Santa Teresinha do Menino Jesus e da Sagrada Face, uma jovem carmelita do século XIX, desenvolveu e viveu essa espiritualidade. A "infância espiritual" é uma busca de Deus e santidade, reconhecendo-se pequeno diante de Deus e dependendo totalmente Dele. Santa Teresinha comparava-se a um passarinho em relação a Deus, buscando imitar as águias (grandes santos), mesmo sendo pequena e incapaz de voar para o Sol brilhante de Deus. A "infância espiritual" também envolve não dar demasiada importância aos próprios pecados e não desanimar diante dos erros. Essa experiência de Santa Teresinha incentiva os cristãos a se tornarem como crianças, pois o Reino dos céus pertence a quem se assemelha a elas.
+      </p>
+    </section>
     <a href="" id="tribute-link" target="_blank"></a>
   </main>
   <footer id="footer">
