add span na menu

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <header class="header">
     <nav class="menu">
       <ul class="menu-list">
-        <li><a href="#main">Inicio</a></li>
-        <li><a href="#tribute-info">Biografia</a></li>
-        <li><a href="#doutrina">Doutrina</a></li>
-        <li><a href="#tribute-link">Referência</a></li>
-        <li><a href="#footer">Mais sobre</a></li>
+        <li><a href="#main"><span>Inicio</span></a></li>
+        <li><a href="#tribute-info"><span>Biografia</span></a></li>
+        <li><a href="#doutrina"><span>Doutrina</span></a></li>
+        <li><a href="#tribute-link"><span>Referência</span></a></li>
+        <li><a href="#footer"><span>Mais sobre</span></a></li>
       </ul>
     </nav>
   </header>
