alterações de classe e texto no html

--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
       </ul>
     </nav>
   </header>
+
   <main class="main" id="main">
     <h1 id="title">Santa Teresinha do Menino Jesus e da Sagrada Face</h1>
+
     <div id="img-div">
       <div class="main-image">
-        <img src="./img/Therese_von_Lisieux.jpg" alt="Santa Teresinha" id="image">
+        <div class="image"></div>
         <figcaption id="img-caption">A noviça Teresa</figcaption>
       </div>
     </div>
+
     <section id="tribute-info">
       <h2>A vida de Marie-Françoise-Thérèse Martin</h2>
       <p>Santa Teresinha, também conhecida como Santa Teresa de Lisieux ou Santa Teresa do Menino Jesus e da Sagrada Face, foi uma freira carmelita e uma das grandes santas da Igreja Católica. Ela nasceu como Marie-Françoise-Thérèse Martin em 2 de janeiro de 1873, em Alençon, na França. Ela foi a última dos nove filhos de Louis Martin e Zélie Guérin, ambos canonizados pela Igreja Católica em 18 de outubro de 2015.</p>
@@ -42,6 +45,7 @@
       <br>
       <p>Santa Teresinha é considerada a padroeira das missões e, embora tenha vivido uma vida breve e aparentemente comum, seu exemplo e ensinamentos continuam a inspirar milhões de pessoas ao redor do mundo, e ela é uma das santas mais populares e queridas da história da Igreja Católica.</p>
     </section>
+
     <article>
       <ul>
         <li>
@@ -86,17 +90,19 @@
       </ul>
 
 
-      <blockquote>"A perfeição não consiste em conhecer muitas coisas, mas sim em conhecer a Deus e amá-Lo com todo o coração."</blockquote>
     </article>
+
     <section id="doutrina">
       <p>
         O conceito de "infância espiritual" na Igreja remonta aos tempos de Jesus, que ensinava que seus discípulos deveriam se tornar como crianças para entrar no Reino dos céus. Santa Teresinha do Menino Jesus e da Sagrada Face, uma jovem carmelita do século XIX, desenvolveu e viveu essa espiritualidade. A "infância espiritual" é uma busca de Deus e santidade, reconhecendo-se pequeno diante de Deus e dependendo totalmente Dele. Santa Teresinha comparava-se a um passarinho em relação a Deus, buscando imitar as águias (grandes santos), mesmo sendo pequena e incapaz de voar para o Sol brilhante de Deus. A "infância espiritual" também envolve não dar demasiada importância aos próprios pecados e não desanimar diante dos erros. Essa experiência de Santa Teresinha incentiva os cristãos a se tornarem como crianças, pois o Reino dos céus pertence a quem se assemelha a elas.
       </p>
     </section>
-    <a href="" id="tribute-link" target="_blank"></a>
+    <a href="/" id="tribute-link" target="_blank">
+      <h1>REFERENCIA Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vero rem, aspernatur vitae quidem excepturi ea ullam. Laborum voluptatibus accusamus atque culpa, reiciendis quis a quasi asperiores deleniti voluptatem? Reprehenderit?</h1>
+    </a>
   </main>
   <footer id="footer">
-
+    <blockquote>"A perfeição não consiste em conhecer muitas coisas, mas sim em conhecer a Deus e amá-Lo com todo o coração."</blockquote>
   </footer>
 </body>
 
