estilização da linha cronologica

--- a/index.html
+++ b/index.html
@@ -46,46 +46,60 @@
       <p>Santa Teresinha é considerada a padroeira das missões e, embora tenha vivido uma vida breve e aparentemente comum, seu exemplo e ensinamentos continuam a inspirar milhões de pessoas ao redor do mundo, e ela é uma das santas mais populares e queridas da história da Igreja Católica.</p>
     </section>
 
-    <article>
+    <article class="crono">
+      <h2>Linha Cronológica</h2>
       <ul>
-        <li>
-          <p>1873: 2 de janeiro: Nasce Marie-Françoise-Thérèse Martin em Alençon, França.</p>
+        <li class="crono-card">
+          <span>1873</span>
+          <p>2 de janeiro: Nasce Marie-Françoise-Thérèse Martin em Alençon, França.</p>
         </li>
-        <li>
-          <p>1877: Sua mãe, Zélie Guérin, falece em 28 de agosto.</p>
+        <li class="crono-card">
+          <span>1877</span>
+          <p>Sua mãe, Zélie Guérin, falece em 28 de agosto.</p>
         </li>
-        <li>
-          <p>1883: Aos 10 anos, Santa Teresinha sofre uma grave doença que ela acredita ter sido curada pela Virgem Maria, após um milagre obtido através de uma relíquia da Santa Teresinha do Menino Jesus.</p>
+        <li class="crono-card">
+          <span>1883</span>
+          <p> Aos 10 anos, Santa Teresinha sofre uma grave doença que ela acredita ter sido curada pela Virgem Maria, após um milagre obtido através de uma relíquia da Santa Teresinha do Menino Jesus.</p>
         </li>
-        <li>
-          <p>1884: Santa Teresinha recebe sua Primeira Comunhão em 8 de maio.</p>
+        <li class="crono-card">
+          <span>1884</span>
+          <p>Santa Teresinha recebe sua Primeira Comunhão em 8 de maio.</p>
         </li>
-        <li>
-          <p>1884: Após a morte de sua irmã Paulina (Madre Agnès do Santíssimo Sacramento) em 28 de julho, ela decide entrar no convento das Carmelitas em Lisieux.</p>
+        <li class="crono-card">
+          <span>1884</span>
+          <p>Após a morte de sua irmã Paulina (Madre Agnès do Santíssimo Sacramento) em 28 de julho, ela decide entrar no convento das Carmelitas em Lisieux.</p>
         </li>
-        <li>
-          <p>1888: 9 de abril: Entra no Carmelo de Lisieux, aos 15 anos, tomando o nome de Irmã Teresa do Menino Jesus e da Sagrada Face.</p>
+        <li class="crono-card">
+          <span>1888</span>
+          <p>9 de abril: Entra no Carmelo de Lisieux, aos 15 anos, tomando o nome de Irmã Teresa do Menino Jesus e da Sagrada Face.</p>
         </li>
-        <li>
-          <p>1888: 8 de setembro: Professa seus votos religiosos.</p>
+        <li class="crono-card">
+          <span>1888</span>
+          <p>8 de setembro: Professa seus votos religiosos.</p>
         </li>
-        <li>
-          <p>1890: Santa Teresinha escreve sua autobiografia "História de uma Alma".</p>
+        <li class="crono-card">
+          <span>1890</span>
+          <p>Santa Teresinha escreve sua autobiografia "História de uma Alma".</p>
         </li>
-        <li>
-          <p>1896: Santa Teresinha fica gravemente doente de tuberculose.</p>
+        <li class="crono-card">
+          <span>1896</span>
+          <p>Santa Teresinha fica gravemente doente de tuberculose.</p>
         </li>
-        <li>
-          <p>1897: 30 de setembro: Santa Teresinha falece aos 24 anos, após uma longa batalha contra a tuberculose.</p>
+        <li class="crono-card">
+          <span>1897</span>
+          <p>30 de setembro: Santa Teresinha falece aos 24 anos, após uma longa batalha contra a tuberculose.</p>
         </li>
-        <li>
-          <p>1897: Publicação póstuma de "História de uma Alma", que atrai a atenção e devoção de muitos leitores.</p>
+        <li class="crono-card">
+          <span>1897</span>
+          <p>Publicação póstuma de "História de uma Alma", que atrai a atenção e devoção de muitos leitores.</p>
         </li>
-        <li>
-          <p>1925: 17 de maio: Santa Teresinha é canonizada pelo Papa Pio XI.</p>
+        <li class="crono-card">
+          <span>1925</span>
+          <p>17 de maio: Santa Teresinha é canonizada pelo Papa Pio XI.</p>
         </li>
-        <li>
-          <p>1997: Proclamada Doutora da Igreja pelo Papa João Paulo II em 19 de outubro, em reconhecimento à sua profunda espiritualidade e contribuições para a teologia e a vida espiritual.</p>
+        <li class="crono-card">
+          <span>1997</span>
+          <p>Proclamada Doutora da Igreja pelo Papa João Paulo II em 19 de outubro, em reconhecimento à sua profunda espiritualidade e contribuições para a teologia e a vida espiritual.</p>
         </li>
       </ul>
 
@@ -93,6 +107,7 @@
     </article>
 
     <section id="doutrina">
+      <h2>Doutrina</h2>
       <p>
         O conceito de "infância espiritual" na Igreja remonta aos tempos de Jesus, que ensinava que seus discípulos deveriam se tornar como crianças para entrar no Reino dos céus. Santa Teresinha do Menino Jesus e da Sagrada Face, uma jovem carmelita do século XIX, desenvolveu e viveu essa espiritualidade. A "infância espiritual" é uma busca de Deus e santidade, reconhecendo-se pequeno diante de Deus e dependendo totalmente Dele. Santa Teresinha comparava-se a um passarinho em relação a Deus, buscando imitar as águias (grandes santos), mesmo sendo pequena e incapaz de voar para o Sol brilhante de Deus. A "infância espiritual" também envolve não dar demasiada importância aos próprios pecados e não desanimar diante dos erros. Essa experiência de Santa Teresinha incentiva os cristãos a se tornarem como crianças, pois o Reino dos céus pertence a quem se assemelha a elas.
       </p>
