atualização em referencias

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
       <h2>Referência</h2>
       <p>Esta página teve como referência a live do Pe. Paulo Ricardo, onde ele fala da vida de Santa Teresinha e da sua <a href="https://padrepauloricardo.org/episodios/a-pequena-via-de-santa-teresinha-do-menino-jesus" id="tribute-link" target="_blank">
           "pequena via".
-        </a> </p>
+        </a></p>
+      <p>Também podemos conhecer mais da vida de Santa Teresinha em outras páginas como, <a href="https://santo.cancaonova.com/santo/santa-teresinha-do-menino-jesus-doutora-da-infancia-espiritual/">Canção Nova</a> e <a href="https://pt.wikipedia.org/wiki/Teresa_de_Lisieux">Wikipedia</a>. </p>
 
     </div>
   </main>
