alteração da linha cronologica

--- a/index.html
+++ b/index.html
@@ -53,50 +53,74 @@
           <span>1873</span>
           <p>2 de janeiro: Nasce Marie-Françoise-Thérèse Martin em Alençon, França.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1877</span>
           <p>Sua mãe, Zélie Guérin, falece em 28 de agosto.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1883</span>
           <p> Aos 10 anos, Santa Teresinha sofre uma grave doença que ela acredita ter sido curada pela Virgem Maria, após um milagre obtido através de uma relíquia da Santa Teresinha do Menino Jesus.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1884</span>
           <p>Santa Teresinha recebe sua Primeira Comunhão em 8 de maio.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1884</span>
           <p>Após a morte de sua irmã Paulina (Madre Agnès do Santíssimo Sacramento) em 28 de julho, ela decide entrar no convento das Carmelitas em Lisieux.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1888</span>
           <p>9 de abril: Entra no Carmelo de Lisieux, aos 15 anos, tomando o nome de Irmã Teresa do Menino Jesus e da Sagrada Face.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1888</span>
           <p>8 de setembro: Professa seus votos religiosos.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1890</span>
           <p>Santa Teresinha escreve sua autobiografia "História de uma Alma".</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1896</span>
           <p>Santa Teresinha fica gravemente doente de tuberculose.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1897</span>
           <p>30 de setembro: Santa Teresinha falece aos 24 anos, após uma longa batalha contra a tuberculose.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1897</span>
           <p>Publicação póstuma de "História de uma Alma", que atrai a atenção e devoção de muitos leitores.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1925</span>
           <p>17 de maio: Santa Teresinha é canonizada pelo Papa Pio XI.</p>
         </li>
+        <div></div>
+        <div></div>
         <li class="crono-card">
           <span>1997</span>
           <p>Proclamada Doutora da Igreja pelo Papa João Paulo II em 19 de outubro, em reconhecimento à sua profunda espiritualidade e contribuições para a teologia e a vida espiritual.</p>
