--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
   </main>
   <footer id="footer">
     <blockquote>A perfeição não consiste em conhecer muitas coisas, mas sim em conhecer a Deus e amá-Lo com todo o coração.</blockquote>
+    <div class="social-media">
+      <img src="./img/icons/github.svg" alt="GitHub">
+      <img src="./img/icons/instagram.svg" alt="Instagram">
+      <img src="./img/icons/twitter.svg" alt="Twitter">
+    </div>
   </footer>
 </body>
 
