add ancora e links

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
   <footer id="footer">
     <blockquote>A perfeição não consiste em conhecer muitas coisas, mas sim em conhecer a Deus e amá-Lo com todo o coração.</blockquote>
     <div class="social-media">
-      <img src="./img/icons/github.svg" alt="GitHub">
-      <img src="./img/icons/instagram.svg" alt="Instagram">
-      <img src="./img/icons/twitter.svg" alt="Twitter">
+      <a href="https://github.com/kervines" target="_blank"><img src="./img/icons/github.svg" alt="GitHub"></a>
+      <a href="https://www.instagram.com/kervin.es/" target="_blank"><img src="./img/icons/instagram.svg" alt="Instagram"></a>
+      <a href="https://twitter.com/devKervines" target="_blank"><img src="./img/icons/twitter.svg" alt="Twitter"></a>
     </div>
   </footer>
 </body>
