--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
         O conceito de "infância espiritual" na Igreja remonta aos tempos de Jesus, que ensinava que seus discípulos deveriam se tornar como crianças para entrar no Reino dos céus. Santa Teresinha do Menino Jesus e da Sagrada Face, uma jovem carmelita do século XIX, desenvolveu e viveu essa espiritualidade. A "infância espiritual" é uma busca de Deus e santidade, reconhecendo-se pequeno diante de Deus e dependendo totalmente Dele. Santa Teresinha comparava-se a um passarinho em relação a Deus, buscando imitar as águias (grandes santos), mesmo sendo pequena e incapaz de voar para o Sol brilhante de Deus. A "infância espiritual" também envolve não dar demasiada importância aos próprios pecados e não desanimar diante dos erros. Essa experiência de Santa Teresinha incentiva os cristãos a se tornarem como crianças, pois o Reino dos céus pertence a quem se assemelha a elas.
       </p>
     </section>
+
+    <section class="gallery">
+
+    </section>
+
     <div id="referencia">
       <h2>Referência</h2>
       <p>Esta página teve como referência a live do Pe. Paulo Ricardo, onde ele fala da vida de Santa Teresinha e da sua <a href="https://padrepauloricardo.org/episodios/a-pequena-via-de-santa-teresinha-do-menino-jesus" id="tribute-link" target="_blank">
