ajuste na  extensão das img

--- a/index.html
+++ b/index.html
@@ -138,7 +138,15 @@
     </section>
 
     <section class="gallery">
-
+      <img src="./img/1.jpg" alt="">
+      <img src="./img/2.jpeg" alt="">
+      <img src="./img/3.jpg" alt="">
+      <img src="./img/4.jpg" alt="">
+      <img src="./img/5.jpg" alt="">
+      <img src="./img/6.jpg" alt="">
+      <img src="./img/7.jpg" alt="">
+      <img src="./img/8.jpeg" alt="">
+      <img src="./img/9.jpg" alt="">
     </section>
 
     <div id="referencia">
