--- a/index.html
+++ b/index.html
@@ -138,15 +138,19 @@
     </section>
 
     <section class="gallery">
-      <img src="./img/1.jpg" alt="">
-      <img src="./img/2.jpeg" alt="">
-      <img src="./img/3.jpg" alt="">
-      <img src="./img/4.jpg" alt="">
-      <img src="./img/5.jpg" alt="">
-      <img src="./img/6.jpg" alt="">
-      <img src="./img/7.jpg" alt="">
-      <img src="./img/8.jpeg" alt="">
-      <img src="./img/9.jpg" alt="">
+      <h2>Galeria de Fotos</h2>
+      <div class="gallery-container">
+        <div class="img-1"></div>
+        <div class="img-2"></div>
+        <div class="img-3"></div>
+        <div class="img-4"></div>
+        <div class="img-5"></div>
+        <div class="img-6"></div>
+        <div class="img-7"></div>
+        <div class="img-8"></div>
+        <div class="img-9"></div>
+      </div>
+
     </section>
 
     <div id="referencia">
