alterações nas tag e estelização da gallery

--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
     <section class="gallery">
       <h2>Galeria de Fotos</h2>
       <div class="gallery-container">
-        <div class="img-1"></div>
-        <div class="img-2"></div>
-        <div class="img-3"></div>
-        <div class="img-4"></div>
-        <div class="img-5"></div>
-        <div class="img-6"></div>
-        <div class="img-7"></div>
-        <div class="img-8"></div>
-        <div class="img-9"></div>
+        <img src="./img/1.jpg" class="img-1" alt="imagem de santa teresinha segurando uma imagem do menino jesus e da sagrada face">
+        <img src="./img/2.jpeg" class="img-2" alt="santa teresinha com cadeias nos braços">
+        <img src="./img/3.jpg" class="img-3" alt="santa teresinha criança">
+        <img src="./img/4.jpg" class="img-4" alt="icone de santa teresinha">
+        <img src="./img/7.jpg" class="img-7" alt="familia de santa teresinha">
+        <img src="./img/6.jpg" class="img-6" alt="santa teresinha adolecente">
+        <img src="./img/5.jpg" class="img-5" alt="santa teresinha ao lado da cruz">
+        <img src="./img/8.jpeg" class="img-8" alt="imagem de santa teresinha">
+        <img src="./img/9.jpg" class="img-9" alt="noviça santa teresinha">
       </div>
 
     </section>
