--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <li><a href="#main">Inicio</a></li>
         <li><a href="#tribute-info">Biografia</a></li>
         <li><a href="#doutrina">Doutrina</a></li>
+        <li><a href="#galeria">Galeria</a></li>
         <li><a href="#referencia">Referência</a></li>
-        <li><a href="#footer">Mais sobre</a></li>
+        <li><a href="#footer">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -27,7 +28,7 @@
     <div id="img-div">
       <div class="main-image">
         <div class="image"></div>
-        <figcaption id="img-caption">A noviça Teresa</figcaption>
+        <figcaption id="img-caption">Marie-Françoise-Thérèse Martin</figcaption>
       </div>
     </div>
 
@@ -47,7 +48,7 @@
     </section>
 
     <article class="crono">
-      <h2>Linha Cronológica</h2>
+      <h2>Linha do Tempo</h2>
       <ul>
         <li class="crono-card">
           <span>1873</span>
@@ -137,7 +138,7 @@
       </p>
     </section>
 
-    <section class="gallery">
+    <section class="gallery" id="galeria">
       <h2>Galeria de Fotos</h2>
       <div class="gallery-container">
         <img src="./img/1.jpg" class="img-1" alt="imagem de santa teresinha segurando uma imagem do menino jesus e da sagrada face">
@@ -157,8 +158,8 @@
       <h2>Referência</h2>
       <p>Esta página teve como referência a live do Pe. Paulo Ricardo, onde ele fala da vida de Santa Teresinha e da sua <a href="https://padrepauloricardo.org/episodios/a-pequena-via-de-santa-teresinha-do-menino-jesus" id="tribute-link" target="_blank">
           "pequena via".
-        </a></p>
-      <p>Também podemos conhecer mais da vida de Santa Teresinha em outras páginas como, <a href="https://santo.cancaonova.com/santo/santa-teresinha-do-menino-jesus-doutora-da-infancia-espiritual/">Canção Nova</a> e <a href="https://pt.wikipedia.org/wiki/Teresa_de_Lisieux">Wikipedia</a>. </p>
+        </a>
+        Também podemos conhecer mais da vida de Santa Teresinha em outras páginas como, <a href="https://santo.cancaonova.com/santo/santa-teresinha-do-menino-jesus-doutora-da-infancia-espiritual/">Canção Nova</a> e <a href="https://pt.wikipedia.org/wiki/Teresa_de_Lisieux">Wikipedia</a>. </p>
 
     </div>
   </main>
