estilização do footer

--- a/index.html
+++ b/index.html
@@ -164,12 +164,18 @@
     </div>
   </main>
   <footer id="footer">
-    <blockquote>A perfeição não consiste em conhecer muitas coisas, mas sim em conhecer a Deus e amá-Lo com todo o coração.</blockquote>
+
     <div class="social-media">
-      <a href="https://github.com/kervines" target="_blank"><img src="./img/icons/github.svg" alt="GitHub"></a>
-      <a href="https://www.instagram.com/kervin.es/" target="_blank"><img src="./img/icons/instagram.svg" alt="Instagram"></a>
-      <a href="https://twitter.com/devKervines" target="_blank"><img src="./img/icons/twitter.svg" alt="Twitter"></a>
+      <h1>Kervin Espíritio Santo</h1>
+      <p>Desenvolvedor Frontend <span>&</span> UI Designer</p>
+      <div class="social-link">
+        <a href="https://github.com/kervines" target="_blank"><img src="./img/icons/github.svg" alt="GitHub"></a>
+        <a href="https://www.instagram.com/kervin.es/" target="_blank"><img src="./img/icons/instagram.svg" alt="Instagram"></a>
+        <a href="https://twitter.com/devKervines" target="_blank"><img src="./img/icons/twitter.svg" alt="Twitter"></a>
+      </div>
+
     </div>
+    <blockquote>A perfeição não consiste em conhecer muitas coisas, mas sim em conhecer a Deus e amá-Lo com todo o coração.</blockquote>
   </footer>
 </body>
 
