--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
         <a href="https://github.com/kervines" target="_blank"><img src="./img/icons/github.svg" alt="GitHub"></a>
         <a href="https://www.instagram.com/kervin.es/" target="_blank"><img src="./img/icons/instagram.svg" alt="Instagram"></a>
         <a href="https://twitter.com/devKervines" target="_blank"><img src="./img/icons/twitter.svg" alt="Twitter"></a>
+        <a href="mailto:dev.kervin@gmail.com"><img src="./img/icons/envelope.svg" alt="email"></a>
       </div>
 
     </div>
