--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <footer id="footer">
 
     <div class="social-media">
-      <h1>Kervin Espíritio Santo</h1>
+      <h1>Kervin Espíritio Santo<span>.</span></h1>
       <p>Desenvolvedor Frontend <span>&</span> UI Designer</p>
       <div class="social-link">
         <a href="https://github.com/kervines" target="_blank"><img src="./img/icons/github.svg" alt="GitHub"></a>
