--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <div class="social-media">
       <h1>Kervin Espíritio Santo<span>.</span></h1>
-      <p>Desenvolvedor Frontend <span>&</span> UI Designer</p>
+      <p>Frontend Developer <span>&</span> UI Designer</p>
       <div class="social-link">
         <a href="https://github.com/kervines" target="_blank"><img src="./img/icons/github.svg" alt="GitHub"></a>
         <a href="https://www.instagram.com/kervin.es/" target="_blank"><img src="./img/icons/instagram.svg" alt="Instagram"></a>
