--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Tribute Page || Kervines</title>
+  <link rel="shortcut icon" href="./img/favicon/flor-de-cerejeira.png" type="image/x-icon">
+  <title>Santa Teresinha do Menino Jesus</title>
+
 </head>
 
 <body>
@@ -164,7 +166,6 @@
     </div>
   </main>
   <footer id="footer">
-
     <div class="social-media">
       <h1>Kervin Espíritio Santo<span>.</span></h1>
       <p>Frontend Developer <span>&</span> UI Designer</p>
@@ -174,7 +175,6 @@
         <a href="https://twitter.com/devKervines" target="_blank"><img src="./img/icons/twitter.svg" alt="Twitter"></a>
         <a href="mailto:dev.kervin@gmail.com"><img src="./img/icons/envelope.svg" alt="email"></a>
       </div>
-
     </div>
     <blockquote>A perfeição não consiste em conhecer muitas coisas, mas sim em conhecer a Deus e amá-Lo com todo o coração.</blockquote>
   </footer>
