finalização do projeto 2.0 de santa teresinha

--- a/project-2/index-2.html
+++ b/project-2/index-2.html
@@ -12,15 +12,13 @@
 
 <body>
   <header class="header">
-    <h1 id="title">Santa Teresinha do Menino Jesus e da Sagrada Face</h1>
+    <h1 id="title">Santa Teresinha do Menino Jesus <br> e da Sagrada Face</h1>
   </header>
 
   <main class="main" id="main">
     <div id="img-div">
-      <div class="main-image">
-        <img src="../img/6.jpg" alt="">
-        <figcaption id="img-caption">Marie-Françoise-Thérèse Martin</figcaption>
-      </div>
+      <img src="../img/6.jpg" alt="Santa Teresinha">
+      <figcaption id="img-caption">Marie-Françoise-Thérèse Martin</figcaption>
     </div>
 
     <section id="tribute-info">
@@ -39,75 +37,60 @@
     </section>
 
     <article class="crono">
-      <h2>Linha do Tempo</h2>
+      <h2>Linha do tempo da vida de Santa Teresinha</h2>
       <ul>
         <li class="crono-card">
-          <span>1873</span>
-          <p>2 de janeiro: Nasce Marie-Françoise-Thérèse Martin em Alençon, França.</p>
+          <p><span>1873</span>: 2 de janeiro: Nasce Marie-Françoise-Thérèse Martin em Alençon, França.</p>
         </li>
 
         <li class="crono-card">
-          <span>1877</span>
-          <p>Sua mãe, Zélie Guérin, falece em 28 de agosto.</p>
+          <p><span>1877</span>: Sua mãe, Zélie Guérin, falece em 28 de agosto.</p>
         </li>
 
         <li class="crono-card">
-          <span>1883</span>
-          <p> Aos 10 anos, Santa Teresinha sofre uma grave doença que ela acredita ter sido curada pela Virgem Maria, após um milagre obtido através de uma relíquia da Santa Teresinha do Menino Jesus.</p>
+          <p><span>1883</span>: Aos 10 anos, Santa Teresinha sofre uma grave doença que ela acredita ter sido curada pela Virgem Maria, após um milagre obtido através de uma relíquia da Santa Teresinha do Menino Jesus.</p>
         </li>
 
         <li class="crono-card">
-          <span>1884</span>
-          <p>Santa Teresinha recebe sua Primeira Comunhão em 8 de maio.</p>
+          <p><span>1884</span>: Santa Teresinha recebe sua Primeira Comunhão em 8 de maio.</p>
         </li>
 
         <li class="crono-card">
-          <span>1884</span>
-          <p>Após a morte de sua irmã Paulina (Madre Agnès do Santíssimo Sacramento) em 28 de julho, ela decide entrar no convento das Carmelitas em Lisieux.</p>
+          <p><span>1884</span>: Após a morte de sua irmã Paulina (Madre Agnès do Santíssimo Sacramento) em 28 de julho, ela decide entrar no convento das Carmelitas em Lisieux.</p>
         </li>
 
         <li class="crono-card">
-          <span>1888</span>
-          <p>9 de abril: Entra no Carmelo de Lisieux, aos 15 anos, tomando o nome de Irmã Teresa do Menino Jesus e da Sagrada Face.</p>
+          <p><span>1888</span>: 9 de abril: Entra no Carmelo de Lisieux, aos 15 anos, tomando o nome de Irmã Teresa do Menino Jesus e da Sagrada Face.</p>
         </li>
 
         <li class="crono-card">
-          <span>1888</span>
-          <p>8 de setembro: Professa seus votos religiosos.</p>
+          <p><span>1888</span>: 8 de setembro, professa seus votos religiosos.</p>
         </li>
 
         <li class="crono-card">
-          <span>1890</span>
-          <p>Santa Teresinha escreve sua autobiografia "História de uma Alma".</p>
+          <p><span>1890</span>:Santa Teresinha escreve sua autobiografia "História de uma Alma".</p>
         </li>
 
         <li class="crono-card">
-          <span>1896</span>
-          <p>Santa Teresinha fica gravemente doente de tuberculose.</p>
+          <p><span>1896</span>: Santa Teresinha fica gravemente doente de tuberculose.</p>
         </li>
 
         <li class="crono-card">
-          <span>1897</span>
-          <p>30 de setembro: Santa Teresinha falece aos 24 anos, após uma longa batalha contra a tuberculose.</p>
+          <p><span>1897</span>: 30 de setembro: Santa Teresinha falece aos 24 anos, após uma longa batalha contra a tuberculose.</p>
         </li>
 
         <li class="crono-card">
-          <span>1897</span>
-          <p>Publicação póstuma de "História de uma Alma", que atrai a atenção e devoção de muitos leitores.</p>
+          <p><span>1897</span>: Publicação póstuma de "História de uma Alma", que atrai a atenção e devoção de muitos leitores.</p>
         </li>
 
         <li class="crono-card">
-          <span>1925</span>
-          <p>17 de maio: Santa Teresinha é canonizada pelo Papa Pio XI.</p>
+          <p><span>1925</span>: 17 de maio: Santa Teresinha é canonizada pelo Papa Pio XI.</p>
         </li>
 
         <li class="crono-card">
-          <span>1997</span>
-          <p>Proclamada Doutora da Igreja pelo Papa João Paulo II em 19 de outubro, em reconhecimento à sua profunda espiritualidade e contribuições para a teologia e a vida espiritual.</p>
+          <p><span>1997</span>: Proclamada Doutora da Igreja pelo Papa João Paulo II em 19 de outubro, em reconhecimento à sua profunda espiritualidade e contribuições para a teologia e a vida espiritual.</p>
         </li>
       </ul>
-
-
     </article>
 
     <section id="doutrina">
@@ -117,10 +100,10 @@
       </p>
     </section>
 
-    <section class="gallery" id="galeria">
+    <article class="gallery" id="galeria">
       <h2>Galeria de Fotos</h2>
       <div class="gallery-container">
-        <img src="./img/1.jpg" class="img-1" alt="imagem de santa teresinha segurando uma imagem do menino jesus e da sagrada face">
+        <img src="../img/1.jpg" class="img-1" alt="imagem de santa teresinha segurando uma imagem do menino jesus e da sagrada face">
         <img src="../img/2.jpeg" class="img-2" alt="santa teresinha com cadeias nos braços">
         <img src="../img/3.jpg" class="img-3" alt="santa teresinha criança">
         <img src="../img/4.jpg" class="img-4" alt="icone de santa teresinha">
@@ -131,7 +114,7 @@
         <img src="../img/9.jpg" class="img-9" alt="noviça santa teresinha">
       </div>
 
-    </section>
+    </article>
 
     <div id="referencia">
       <h2>Referência</h2>
@@ -147,10 +130,10 @@
       <h1>Kervin Espíritio Santo<span>.</span></h1>
       <p>Frontend Developer <span>&</span> UI Designer</p>
       <div class="social-link">
-        <a href="https://github.com/kervines" target="_blank"><img src="./img/icons/github.svg" alt="GitHub"></a>
-        <a href="https://www.instagram.com/kervin.es/" target="_blank"><img src="./img/icons/instagram.svg" alt="Instagram"></a>
-        <a href="https://twitter.com/devKervines" target="_blank"><img src="./img/icons/twitter.svg" alt="Twitter"></a>
-        <a href="mailto:dev.kervin@gmail.com"><img src="./img/icons/envelope.svg" alt="email"></a>
+        <a href="https://github.com/kervines" target="_blank"><img src="../img/icons/github.svg" alt="GitHub"></a>
+        <a href="https://www.instagram.com/kervin.es/" target="_blank"><img src="../img/icons/instagram.svg" alt="Instagram"></a>
+        <a href="https://twitter.com/devKervines" target="_blank"><img src="../img/icons/twitter.svg" alt="Twitter"></a>
+        <a href="mailto:dev.kervin@gmail.com"><img src="../img/icons/envelope.svg" alt="email"></a>
       </div>
     </div>
     <blockquote>A perfeição não consiste em conhecer muitas coisas, mas sim em conhecer a Deus e amá-Lo com todo o coração.</blockquote>
