projeto finalizado e aprovado

--- a/project-2/index-2.html
+++ b/project-2/index-2.html
@@ -17,7 +17,7 @@
 
   <main class="main" id="main">
     <div id="img-div">
-      <img src="../img/6.jpg" alt="Santa Teresinha">
+      <img id="image" src="../img/6.jpg" alt="Santa Teresinha">
       <figcaption id="img-caption">Marie-Françoise-Thérèse Martin</figcaption>
     </div>
 
